[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-databricks-server"
version = "0.1.0"
description = "MCP server for Databricks integration with validation tools and configuration"
authors = [
    {name = "RuniThomsen", email = "runi@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "databricks-sql-connector>=3.0.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0"
]

[project.scripts]
mcp-databricks = "server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true